5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1826_1643.log
== TEST (2019-06-12 18:09:30) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:11:51) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
v_zeros=zeros(notas, dtype=int)
for i in notas:
	if(i >= 5):
		cont=cont+1
		print(cont)		
print(v_zeros)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:12:42) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
v_zeros=zeros(notas, dtype=int)
for i in notas:
	if(i >= 5):
		cont=cont+1
	print(cont)		
print(v_zeros)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:13:19) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
v_zeros=zeros(notas, dtype=int)
for i in notas:
	if(i >= 5):
		cont=cont+1
	print(cont)		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:14:17) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
v_zeros=zeros(notas, dtype=int)
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)		
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:14:54) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
v_zeros=zeros(notas, dtype=int)
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
print(v_zeros)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:15:42) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
v_zeros=zeros(notas, dtype=int)

print(v_zeros)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 18:23:20) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
cont1=0
zeros=zeros(notas, dtype=int)
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
for i in notas:
	if(i>=5):
		v_zeros=v_zeros[cont1]+i
	cont1=cont1+1			
print(v_zeros)
	
-- EXECUTION TIME:
1.26801
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1826/1643/main.py", line 5, in <module>
    zeros=zeros(notas, dtype=int)
TypeError: 'numpy.float64' object cannot be interpreted as an integer

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:23:22) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
cont1=0
zeros=zeros(notas, dtype=int)
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
for i in notas:
	if(i>=5):
		v_zeros=v_zeros[cont1]+i
	cont1=cont1+1			
print(v_zeros)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:23:47) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
cont1=0
zeros=zeros(notas, dtype=int)
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
for i in notas:
	if(i>=5):
		v_zeros=v_zeros[cont1]+i
	cont1=cont1+1			
print(v_zeros)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:24:12) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
cont1=0
v_zeros=zeros(notas, dtype=int)
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
for i in notas:
	if(i>=5):
		v_zeros=v_zeros[cont1]+i
	cont1=cont1+1			
print(v_zeros)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:24:45) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
cont1=0
v_zeros=zeros(notas, dtype=int)
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
		
print(v_zeros)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:25:40) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
cont1=0
v_zeros=zeros(notas, dtype=int)
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
		
print(v_zeros[])
	
-- ERROR:
File "XXXX", line 11
    print(v_zeros[])
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:25:44) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
cont1=0
v_zeros=zeros(notas, dtype=int)
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
		
print(v_zeros[])
	
-- ERROR:
File "XXXX", line 11
    print(v_zeros[])
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:26:07) 
-- CODE:
from numpy import*
notas=array(eval(int(input("notas: "))))
cont=0
cont1=0
v_zeros=zeros(notas, dtype=int)
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
		
print(v_zeros)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:43:08) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
cont1=0
v_zeros=zeros(size(notas), dtype=int)
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
		
print(v_zeros)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:45:48) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
cont1=0
v_zeros=zeros(size(notas), dtype=int)
v_arange=arange(notas)
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	

print(v_zeros)
print(v_arange)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:47:05) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
cont1=0
v_zeros=zeros(size(notas), dtype=int)
v_arange=range(0,size(notas))
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	

print(v_zeros)
print(v_arange)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:48:24) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
cont1=0
v_zeros=zeros(size(notas), dtype=int)
v_arange=range[0,size(notas)]
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	

print(v_zeros)
print(v_arange)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:48:37) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
cont1=0
v_zeros=zeros(size(notas), dtype=int)
v_arange=range[0,size(notas)]
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	

print(v_zeros)
print(v_arange)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:49:22) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
cont1=0
v_zeros=zeros(size(notas), dtype=int)
v_arange=arange(size(notas))
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	

print(v_zeros)
print(v_arange)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:52:44) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
cont1=0
v_zeros=zeros(size(notas), dtype=int)
v_arange=arange(size(notas))
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
for i in notas:
	if(i>=5):
		v_zeros=v_zeros[cont1]+v_arange[cont1]
	cont1=cont1+1	
print(v_zeros)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:53:30) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
cont1=0
v_zeros=zeros(size(notas), dtype=int)
v_arange=arange(size(notas))
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
for i in notas:
	if(i>=5):
		v_zeros=v_zeros[cont1]+v_arange[cont1]
cont1=cont1+1	
print(v_zeros)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:55:41) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
cont1=0
v_zeros=zeros(size(notas), dtype=int)
v_arange=arange(size(notas))
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
for i in notas:
	if(i>=5):
		v_zeros=v_zeros(cont1)+v_arange(cont1)
cont1=cont1+1	
print(v_zeros)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 18:57:19) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
cont1=0
v_zeros=zeros(size(notas), dtype=int)
v_arange=arange(size(notas))
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
for i in notas:
	if(i>=5):
cont1=cont1+1	
print(v_zeros)	
-- ERROR:
File "XXXX", line 13
    cont1=cont1+1	
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:00:57) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
cont1=0
v_zeros=zeros(size(notas), dtype=int)
v_arange=arange(size(notas))
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
for i in notas:
	if(i>=5):
		
cont1=cont1+1	
print(v_zeros)	
-- ERROR:
File "XXXX", line 14
    cont1=cont1+1	
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:04:21) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
cont1=0
v_arange=arange(size(notas))
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
v_zeros=zeros(cont, dtype=int)
print(v_zeros)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:04:37) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
cont1=0
v_arange=arange(size(notas))
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
v_zeros=zeros(cont, dtype=int)
print(v_zeros)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:07:36) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
aux=0
v_arange=arange(size(notas))
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
v_zeros=zeros(cont, dtype=int)
for i in notas:
	if(i>=5):
		v_zeros[aux]=v_zeros[aux]+v_arange[aux]
print(v_zeros)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:08:27) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
aux=0
v_arange=arange(size(notas))
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
v_zeros=zeros(cont, dtype=int)
for i in notas:
	if(i>=5):
		v_zeros[aux]=v_zeros[aux]+v_arange[aux]
		aux=aux+1
print(v_zeros)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:09:19) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
aux=0
v_arange=arange(size(notas))
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
v_zeros=zeros(cont, dtype=int)
for i in notas:
	if(i>=5):
		v_zeros[aux]=v_zeros[aux]+v_arange[aux]
	aux=aux+1
print(v_zeros)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:16:46) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
aux=0
v_arange=arange(size(notas))
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
v_zeros=zeros(cont, dtype=int)
for i in notas:
	if(i>=5):
		v_zeros[aux]=v_zeros[]+aux_b
		aux=aux+1		
print(v_zeros)	
-- EXECUTION TIME:
0.714062
-- ERROR:
  File "/home/codebench/codes/1826/1643/main.py", line 13
    v_zeros[aux]=v_zeros[]+aux_b
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:17:18) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
aux=0
v_arange=arange(size(notas))
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
v_zeros=zeros(cont, dtype=int)
for i in notas:
	if(i>=5):
		v_zeros[aux_b]=v_zeros[]+aux_b
aux_b=aux_b+1		
print(v_zeros)	
-- EXECUTION TIME:
0.819234
-- ERROR:
  File "/home/codebench/codes/1826/1643/main.py", line 13
    v_zeros[aux_b]=v_zeros[]+aux_b
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:17:19) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
aux=0
v_arange=arange(size(notas))
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
v_zeros=zeros(cont, dtype=int)
for i in notas:
	if(i>=5):
		v_zeros[aux_b]=v_zeros[]+aux_b
aux_b=aux_b+1		
print(v_zeros)	
-- ERROR:
File "XXXX", line 13
    v_zeros[aux_b]=v_zeros[]+aux_b
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:17:37) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
aux=0
aux_b=0
v_arange=arange(size(notas))
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
v_zeros=zeros(cont, dtype=int)
for i in notas:
	if(i>=5):
		v_zeros[aux_b]=v_zeros[]+aux_b
aux_b=aux_b+1		
print(v_zeros)	
-- EXECUTION TIME:
0.788132
-- ERROR:
  File "/home/codebench/codes/1826/1643/main.py", line 14
    v_zeros[aux_b]=v_zeros[]+aux_b
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:19:08) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
aux=0
aux_b=0
v_arange=arange(size(notas))
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
v_zeros=zeros(cont, dtype=int)
for i in notas:
	if(i>=5):
		v_zeros[aux]=v_zeros[aux]+aux_b
		aux=aux+1
aux_b=aux_b+1		
print(v_zeros)	
-- EXECUTION TIME:
1.2207
-- TEST CASE 1:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,2.1,2.3,4.99]
---- correct output:
6
[0 3 4 5 6 7]
---- user output:
6
[0 0 0 0 0 0]
-- TEST CASE 2:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,5,2.3,6]
---- correct output:
8
[ 0  3  4  5  6  7  8 10]
---- user output:
8
[0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,2.1,2.3,4.99,6.1,3.6,2.9,10,8]
---- correct output:
9
[ 0  3  4  5  6  7 11 14 15]
---- user output:
9
[0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:19:09) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
aux=0
aux_b=0
v_arange=arange(size(notas))
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
v_zeros=zeros(cont, dtype=int)
for i in notas:
	if(i>=5):
		v_zeros[aux]=v_zeros[aux]+aux_b
		aux=aux+1
aux_b=aux_b+1		
print(v_zeros)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 19:20:01) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
aux=0
aux_b=0
v_arange=arange(size(notas))
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
v_zeros=zeros(cont, dtype=int)
for i in notas:
	if(i>=5):
		v_zeros[aux]=v_zeros[aux]+aux_b
		aux=aux+1
	aux_b=aux_b+1		
print(v_zeros)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:20:04) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
aux=0
aux_b=0
v_arange=arange(size(notas))
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
v_zeros=zeros(cont, dtype=int)
for i in notas:
	if(i>=5):
		v_zeros[aux]=v_zeros[aux]+aux_b
		aux=aux+1
	aux_b=aux_b+1		
print(v_zeros)	
-- EXECUTION TIME:
1.52712
-- TEST CASE 1:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,2.1,2.3,4.99]
---- correct output:
6
[0 3 4 5 6 7]
---- user output:
notas: 6
[0 3 4 5 6 7]
-- TEST CASE 2:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,5,2.3,6]
---- correct output:
8
[ 0  3  4  5  6  7  8 10]
---- user output:
notas: 8
[ 0  3  4  5  6  7  8 10]
-- TEST CASE 3:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,2.1,2.3,4.99,6.1,3.6,2.9,10,8]
---- correct output:
9
[ 0  3  4  5  6  7 11 14 15]
---- user output:
notas: 9
[ 0  3  4  5  6  7 11 14 15]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 19:20:16) 
-- CODE:
from numpy import*
notas=array(eval(input("notas: ")))
cont=0
aux=0
aux_b=0
v_arange=arange(size(notas))
for i in notas:
	if(i >= 5):
		cont=cont+1
print(cont)	
v_zeros=zeros(cont, dtype=int)
for i in notas:
	if(i>=5):
		v_zeros[aux]=v_zeros[aux]+aux_b
		aux=aux+1
	aux_b=aux_b+1		
print(v_zeros)	
-- EXECUTION TIME:
0.881831
-- TEST CASE 1:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,2.1,2.3,4.99]
---- correct output:
6
[0 3 4 5 6 7]
---- user output:
6
[0 3 4 5 6 7]
-- TEST CASE 2:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,5,2.3,6]
---- correct output:
8
[ 0  3  4  5  6  7  8 10]
---- user output:
8
[ 0  3  4  5  6  7  8 10]
-- TEST CASE 3:
---- input:
[9.0,1.5,4.2,7.0,5.5,7.8,9.1,8,2.1,2.3,4.99,6.1,3.6,2.9,10,8]
---- correct output:
9
[ 0  3  4  5  6  7 11 14 15]
---- user output:
9
[ 0  3  4  5  6  7 11 14 15]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
